adição de responsividade

--- a/style.css
+++ b/style.css
@@ -101,4 +101,26 @@
   button:hover {
     background-color: var(--cor-primaria-hover);
   }
+
+  /* Responsividade */
+@media (max-width: 768px) {
+    form input,
+    form select,
+    form button {
+        flex: 1 1 100%; /* Tornando os campos do formulário em 100% da largura */
+    }
+
+    table {
+        font-size: 0.9rem; /* Ajustando o tamanho da fonte da tabela */
+    }
+
+    th, td {
+        padding: 8px; /* Reduzindo o padding nas células da tabela */
+    }
+
+    button {
+        width: 100%; /* Botões ocupam 100% da largura disponível em dispositivos móveis */
+        margin-bottom: 10px; /* Espaçamento entre os botões em dispositivos móveis */
+    }
+}
   
